Fix course list and header margins so it's aligned

--- a/client/src/containers/Courses/ListCourses.module.css
+++ b/client/src/containers/Courses/ListCourses.module.css
@@ -1,12 +1,12 @@
 .courseContainer {
   display: flex;
   flex-direction: column;
-  margin: 1rem 2%;
 }
 
 .headerContainer {
   display: flex;
   justify-content: space-between;
+  margin: 1.5rem 2% 1rem 2%;
 }
 
 .addBtn {
